# jni_xxxx_demo

./: .gitignore  ConstraintLayout.md  Note.MD  README.MD  build.gradle  data.txt  gradle.properties  settings.gradle  signals.md  创建仓库.txt
BuildSrc/: build.gradle  readme.md
anno_apt_apis/: build.gradle
anno_apt_apis/src/main/: AndroidManifest.xml
app/: .gitignore  build.gradle  data_engine.cpp
app/files/: common.h  sogouvad.cpp  sogouvad_detector.cpp
app/src/main/: AndroidManifest.xml  HashMap.java
app/src/main/cpp/: CMakeLists.txt
app/src/main/cpp/include/: Global.h  c_func.h  com_jni_bus_JNI_Bus.h  com_xiaoge_org_jni_OpenSLES.h  cpp_func.h  log.h  looper.h  test.h
app/src/main/cpp/src/: Global.cpp  Initializer.cpp  authu.cpp  c_call_cpp.c  c_func.c  char_util.cpp  com_xiaoge_org_jni_OpenSLES.cpp  cpp_call_c.cpp  cpp_func.cpp  data.cpp  looper.cpp  test.cpp
apt1/: build.gradle
apt_processor/: README.MD  build.gradle
asm/src/main/: AndroidManifest.xml
base_lib/: build.gradle
base_lib/src/main/: AndroidManifest.xml
baselib/: build.gradle  proguard-rules-2017-4-10.pro
baselib/src/main/: AndroidManifest.xml
dagger/: build.gradle  readme.md
dagger/src/main/: AndroidManifest.xml
exp_other/src/main/: AndroidManifest.xml
gradle/wrapper/: gradle-wrapper.properties
maven/: build.gradle  jcenter-push.gradle  local-maven.gradle  readme.md
maven/src/main/: AndroidManifest.xml
media/: build.gradle
media/src/main/: AndroidManifest.xml
test_data/: data1.txt
test_data/data/: appsinfo.txt  data2.txt
xxipc/src/main/: AndroidManifest.xml
(+558 files in other folders)
